# adhan-system-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  runit.sh
adhan/: Adhan.h  CMakeCache.txt
adhan/googlemock-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
adhan/googlemock-download/googlemock-download-prefix/tmp/: googlemock-download-gitclone.cmake  googlemock-download-gitupdate.cmake
adhan/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
adhan/googletest-download/googletest-download-prefix/tmp/: googletest-download-gitclone.cmake  googletest-download-gitupdate.cmake
adhan/src/: CMakeCache.txt  Makefile  calculation_parameters.c  cmake_install.cmake  data_components.c  example  example.c  prayer_times.c  solar_coordinates.c  solar_time.c
adhan/test/: CMakeCache.txt  DartConfiguration.tcl
adhan/test/googlemock-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
adhan/test/googlemock-download/googlemock-download-prefix/tmp/: googlemock-download-gitclone.cmake  googlemock-download-gitupdate.cmake
adhan/test/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
adhan/test/googletest-download/googletest-download-prefix/tmp/: googletest-download-gitclone.cmake  googletest-download-gitupdate.cmake
testing/: adhancfg.toml
